[gd_scene load_steps=3 format=2]

[ext_resource path="res://shared/managers/audio_stream_player_visibility.gd" type="Script" id=1]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 1.0, 0, 1, Vector2( 1, 1 ), 1.0, 0.0, 1, 0 ]

[node name="AudioStreamPlayerVisibility" type="Node2D"]
script = ExtResource( 1 )
attenuation_curve = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="ObjectVisibility" type="VisibilityNotifier2D" parent="."]
rect = Rect2( 0, 0, 0, 0 )

[node name="AttenuationVisibility" type="VisibilityNotifier2D" parent="."]
rect = Rect2( 0, 0, 0, 0 )

[node name="VolumeTween" type="Tween" parent="."]
